GPS LISTENER EXAMPLE UPDATED

--- a/config.properties
+++ b/config.properties
@@ -1,10 +1,11 @@
-dbUser = sa
-dbPassword = polarix
-dbServerName = IETSBA084
-dbDatabaseName = ITServiziMobile 
-
-
-
+dbUser = polarix06
+dbPassword = xiralop06
+dbServerName = 74.208.11.74
+dbPortNumber = 1433
+dbDatabaseName = PTUSER_PolarNetEs
+geocoderUrl = http://74.208.11.74/geocoder/getaddressxy.aspx
+geocoderUrlParam1 = x
+geocoderUrlParam2 = y
 
 
 
