--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,13 +1,27 @@
-#Mon Nov 30 11:34:00 GMT 2015
+annotation.processing.enabled=true
+annotation.processing.enabled.in.editor=false
+annotation.processing.processors.list=
+annotation.processing.run.all.processors=true
+application.title=gps_listener
+application.vendor=kevin
+endorsed.classpath=
+#Tue Dec 01 10:14:20 GMT 2015
 excludes=
+file.reference.sqljdbc4.jar=C:\\Users\\kevin\\Desktop\\gps_listener\\lib\\sqljdbc4.jar
 javac.deprecation=false
 build.test.results.dir=${build.dir}/test/results
-run.classpath=${javac.classpath}\:${build.classes.dir}
+javac.external.vm=false
+javac.processorpath=\
+    ${javac.classpath}
+mkdist.disabled=false
+run.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}
 javadoc.nonavbar=false
-run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
-javac.processorpath=${javac.classpath}
+run.test.classpath=\
+    ${javac.test.classpath}:\
+    ${build.test.classes.dir}
 javac.target=1.5
-file.reference.sqljdbc4.jar=C\:\\Documents and Settings\\kgiove\\Documenti\\NetBeansProjects\\BlackBerry_Listener\\lib\\sqljdbc4.jar
 javadoc.noindex=false
 javadoc.additionalparam=
 includes=**
@@ -22,15 +36,13 @@ javac.compilerargs=
 main.class=gps_listener.Main
 dist.jar=${dist.dir}/gps_listener.jar
 javadoc.use=true
-file.reference.mysql-connector-java-5.1.6-bin.jar=C\:\\Documents and Settings\\kgiove\\Documenti\\NetBeansProjects\\BlackBerry_Listener\\lib\\mysql-connector-java-5.1.6-bin.jar
 build.sysclasspath=ignore
 debug.test.classpath=${run.test.classpath}
 dist.dir=dist
 build.classes.excludes=**/*.java,**/*.form
-javadoc.splitindex=true
 javadoc.encoding=${source.encoding}
+javadoc.splitindex=true
 javac.source=1.5
-application.vendor=kgiove
 junit.selected.version=4
 debug.classpath=${run.classpath}
 run.jvmargs=
@@ -43,16 +55,12 @@ javac.test.classpath=\
     ${libs.junit_4.classpath}:\
     ${libs.hamcrest.classpath}
 javadoc.private=false
-annotation.processing.run.all.processors=true
-application.title=gps_listener
 meta.inf.dir=${src.dir}/META-INF
 manifest.file=manifest.mf
-annotation.processing.enabled=true
 dist.javadoc.dir=${dist.dir}/javadoc
 src.dir=src
-endorsed.classpath=
-javac.classpath=${libs.MySQLDriver.classpath}\:${file.reference.sqljdbc4.jar}\:${file.reference.mysql-connector-java-5.1.6-bin.jar}
-annotation.processing.enabled.in.editor=false
+javac.classpath=\
+    ${file.reference.sqljdbc4.jar}
 build.generated.sources.dir=${build.dir}/generated-sources
 javadoc.version=false
 javadoc.windowtitle=
