--- a/config.properties
+++ b/config.properties
@@ -1,11 +1,8 @@
-dbUser = polarix06
-dbPassword = xiralop06
-dbServerName = 74.208.11.74
+dbUser = admin
+dbPassword = admin
+dbServerName = localhost
 dbPortNumber = 1433
-dbDatabaseName = PTUSER_PolarNetEs
-geocoderUrl = http://74.208.11.74/geocoder/getaddressxy.aspx
+dbDatabaseName = example
+geocoderUrl = http://localhost/geocoder/getaddressxy.aspx
 geocoderUrlParam1 = x
 geocoderUrlParam2 = y
-
-
-
