--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,19 +1,8 @@
-annotation.processing.enabled=true
-annotation.processing.enabled.in.editor=false
-annotation.processing.processors.list=
-annotation.processing.run.all.processors=true
-application.title=gps_listener
-application.vendor=kevin
-endorsed.classpath=
-#Tue Dec 01 10:14:20 GMT 2015
+#Tue Dec 01 11:17:56 GMT 2015
 excludes=
-file.reference.sqljdbc4.jar=C:\\Users\\kevin\\Desktop\\gps_listener\\lib\\sqljdbc4.jar
 javac.deprecation=false
 build.test.results.dir=${build.dir}/test/results
 javac.external.vm=false
-javac.processorpath=\
-    ${javac.classpath}
-mkdist.disabled=false
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -21,7 +10,11 @@ javadoc.nonavbar=false
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
+javac.processorpath=\
+    ${javac.classpath}
 javac.target=1.5
+file.reference.sqljdbc4.jar=C\:\\Users\\kevin\\Desktop\\gps_listener\\lib\\sqljdbc4.jar
+annotation.processing.processors.list=
 javadoc.noindex=false
 javadoc.additionalparam=
 includes=**
@@ -40,27 +33,33 @@ build.sysclasspath=ignore
 debug.test.classpath=${run.test.classpath}
 dist.dir=dist
 build.classes.excludes=**/*.java,**/*.form
-javadoc.encoding=${source.encoding}
 javadoc.splitindex=true
+javadoc.encoding=${source.encoding}
 javac.source=1.5
-junit.selected.version=4
+application.vendor=kevin
+junit.selected.version=3
 debug.classpath=${run.classpath}
 run.jvmargs=
-build.generated.dir=${build.dir}/generated
-jar.compress=false
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit.classpath}:\
     ${libs.junit_4.classpath}:\
     ${libs.hamcrest.classpath}
+jar.compress=false
+build.generated.dir=${build.dir}/generated
 javadoc.private=false
+annotation.processing.run.all.processors=true
+application.title=gps_listener
 meta.inf.dir=${src.dir}/META-INF
 manifest.file=manifest.mf
+annotation.processing.enabled=true
 dist.javadoc.dir=${dist.dir}/javadoc
 src.dir=src
+endorsed.classpath=
+mkdist.disabled=false
 javac.classpath=\
     ${file.reference.sqljdbc4.jar}
+annotation.processing.enabled.in.editor=false
 build.generated.sources.dir=${build.dir}/generated-sources
 javadoc.version=false
 javadoc.windowtitle=
